BUG - very long contact name doesn't fit into contact view pane

--- a/styles/desktop/contacts.less
+++ b/styles/desktop/contacts.less
@@ -163,6 +163,7 @@
 		font-size: 18pt;
 		font-weight: normal;
 		margin: 0 0 6px;
+		white-space: normal;
 	}
 	
 	.mailto_link {
